src/test/rustdoc-ui/invalid-html-tags.stderr
error: unclosed HTML tag `unknown`
  --> $DIR/invalid-html-tags.rs:3:1
   |
LL | / /// <script>
LL | |
LL | |
LL | | /// <img><input>
...  |
LL | | /// < ok
LL | | /// <script>
   | |____________^
   |
note: the lint level is defined here
  --> $DIR/invalid-html-tags.rs:1:9
   |
LL | #![deny(invalid_html_tags)]
   |         ^^^^^^^^^^^^^^^^^

error: unclosed HTML tag `script`
  --> $DIR/invalid-html-tags.rs:3:1
   |
LL | / /// <script>
LL | |
LL | |
LL | | /// <img><input>
...  |
LL | | /// < ok
LL | | /// <script>
   | |____________^

error: unopened HTML tag `h2`
  --> $DIR/invalid-html-tags.rs:13:1
   |
LL | / /// <h1>
LL | |
LL | |
LL | | ///   <h2>
LL | | ///     <h3>
LL | | /// </h1>
   | |_________^

error: unopened HTML tag `h3`
  --> $DIR/invalid-html-tags.rs:13:1
   |
LL | / /// <h1>
LL | |
LL | |
LL | | ///   <h2>
LL | | ///     <h3>
LL | | /// </h1>
   | |_________^

error: aborting due to 4 previous errors

